Adding Go Swagger
